--- a/seminar_03_als/recsys_sem3_als.ipynb
+++ b/seminar_03_als/recsys_sem3_als.ipynb
@@ -14,19 +14,19 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from tqdm import tqdm\n",
-    "from typing import Tuple, List\n",
     "import time\n",
+    "from typing import List, Tuple\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "import scipy.sparse as sp\n",
-    "from scipy.sparse import csr_matrix\n",
+    "import seaborn as sns\n",
     "from implicit.als import AlternatingLeastSquares\n",
-    "from implicit.evaluation import mean_average_precision_at_k"
+    "from implicit.evaluation import mean_average_precision_at_k\n",
+    "from scipy.sparse import csr_matrix\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -58,27 +58,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.isfile('netflix_data.csv'):\n",
-    "    data = open('netflix_data.csv', mode='w')\n",
-    "    \n",
+    "if not os.path.isfile(\"netflix_data.csv\"):\n",
+    "    data = open(\"netflix_data.csv\", mode=\"w\")\n",
+    "\n",
     "    row = list()\n",
-    "    files=['archive/combined_data_1.txt',\n",
-    "           'archive/combined_data_2.txt', \n",
-    "           'archive/combined_data_3.txt', \n",
-    "           'archive/combined_data_4.txt']\n",
+    "    files = [\n",
+    "        \"archive/combined_data_1.txt\",\n",
+    "        \"archive/combined_data_2.txt\",\n",
+    "        \"archive/combined_data_3.txt\",\n",
+    "        \"archive/combined_data_4.txt\",\n",
+    "    ]\n",
     "    for file in files:\n",
     "        print(\"Reading ratings from {}...\".format(file))\n",
     "        with open(file) as f:\n",
-    "            for line in f: \n",
+    "            for line in f:\n",
     "                del row[:]\n",
     "                line = line.strip()\n",
-    "                if line.endswith(':'):\n",
-    "                    movie_id = line.replace(':', '')\n",
+    "                if line.endswith(\":\"):\n",
+    "                    movie_id = line.replace(\":\", \"\")\n",
     "                else:\n",
-    "                    row = [x for x in line.split(',')]\n",
+    "                    row = [x for x in line.split(\",\")]\n",
     "                    row.insert(0, movie_id)\n",
-    "                    data.write(','.join(row))\n",
-    "                    data.write('\\n')\n",
+    "                    data.write(\",\".join(row))\n",
+    "                    data.write(\"\\n\")\n",
     "        print(\"Done.\\n\")\n",
     "    data.close()"
    ]
@@ -101,12 +103,10 @@
    "source": [
     "print(\"Creating the dataframe from netflix_data.csv file..\")\n",
     "ratings = pd.read_csv(\n",
-    "    'netflix_data.csv', \n",
-    "    sep=',', \n",
-    "    names=['movie_id', 'user','rating','date']\n",
+    "    \"netflix_data.csv\", sep=\",\", names=[\"movie_id\", \"user\", \"rating\", \"date\"]\n",
     ")\n",
     "ratings.date = pd.to_datetime(ratings.date)\n",
-    "print('Done.\\n')\n",
+    "print(\"Done.\\n\")\n",
     "\n",
     "# # we are arranging the ratings according to time.\n",
     "# print('Sorting the dataframe by date..')\n",
@@ -220,8 +220,8 @@
    "outputs": [],
    "source": [
     "def ids_encoder(ratings):\n",
-    "    users = sorted(ratings['user'].unique())\n",
-    "    items = sorted(ratings['movie_id'].unique())\n",
+    "    users = sorted(ratings[\"user\"].unique())\n",
+    "    items = sorted(ratings[\"movie_id\"].unique())\n",
     "\n",
     "    # create users and items encoders\n",
     "    uencoder = LabelEncoder()\n",
@@ -236,6 +236,7 @@
     "    ratings.movie_id = iencoder.transform(ratings.movie_id.tolist())\n",
     "\n",
     "    return ratings, uencoder, iencoder\n",
+    "\n",
     "\n",
     "ratings_, uencoder, iencoder = ids_encoder(ratings)"
    ]
@@ -264,11 +265,13 @@
     }
    ],
    "source": [
-    "ratings_cnt = ratings.groupby('rating')['user'].count().rename('cnt_users').reset_index()\n",
-    "plt.barh(ratings_cnt.rating, ratings_cnt.cnt_users, color='royalblue')\n",
-    "plt.title('Overall Count of Ratings', fontsize=10)\n",
-    "plt.xlabel('Count', fontsize=10)\n",
-    "plt.ylabel('Rating', fontsize=10)\n",
+    "ratings_cnt = (\n",
+    "    ratings.groupby(\"rating\")[\"user\"].count().rename(\"cnt_users\").reset_index()\n",
+    ")\n",
+    "plt.barh(ratings_cnt.rating, ratings_cnt.cnt_users, color=\"royalblue\")\n",
+    "plt.title(\"Overall Count of Ratings\", fontsize=10)\n",
+    "plt.xlabel(\"Count\", fontsize=10)\n",
+    "plt.ylabel(\"Rating\", fontsize=10)\n",
     "plt.grid()\n",
     "plt.show()"
    ]
@@ -295,8 +298,10 @@
     }
    ],
    "source": [
-    "ratings_per_movie = ratings.groupby(by='movie_id')['rating'].count().sort_values(ascending=False)\n",
-    "print(ratings_per_movie.describe().apply('{0:.2f}'.format))"
+    "ratings_per_movie = (\n",
+    "    ratings.groupby(by=\"movie_id\")[\"rating\"].count().sort_values(ascending=False)\n",
+    ")\n",
+    "print(ratings_per_movie.describe().apply(\"{:.2f}\".format))"
    ]
   },
   {
@@ -321,8 +326,10 @@
     }
    ],
    "source": [
-    "avg_ratings_per_movie = ratings.groupby(by='movie_id')['rating'].mean().sort_values(ascending=False)\n",
-    "print(avg_ratings_per_movie.describe().apply('{0:.2f}'.format))"
+    "avg_ratings_per_movie = (\n",
+    "    ratings.groupby(by=\"movie_id\")[\"rating\"].mean().sort_values(ascending=False)\n",
+    ")\n",
+    "print(avg_ratings_per_movie.describe().apply(\"{:.2f}\".format))"
    ]
   },
   {
@@ -342,12 +349,16 @@
     }
    ],
    "source": [
-    "user_item_counts = ratings.groupby('user')['movie_id'].count().values\n",
+    "user_item_counts = ratings.groupby(\"user\")[\"movie_id\"].count().values\n",
     "\n",
     "# Plot the histogram\n",
     "plt.figure(figsize=(10, 6))\n",
-    "ax = sns.histplot(user_item_counts, bins=50, kde=True);\n",
-    "ax.set(xlabel=\"Number of items\", ylabel=\"Number of users\", title='User-item interactions count')\n",
+    "ax = sns.histplot(user_item_counts, bins=50, kde=True)\n",
+    "ax.set(\n",
+    "    xlabel=\"Number of items\",\n",
+    "    ylabel=\"Number of users\",\n",
+    "    title=\"User-item interactions count\",\n",
+    ")\n",
     "ax.grid()"
    ]
   },
@@ -371,7 +382,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def split_data(ratings: pd.DataFrame) -> Tuple[sp._csr.csr_matrix, List[Tuple[float, float, float]]]:\n",
+    "def split_data(\n",
+    "    ratings: pd.DataFrame,\n",
+    ") -> Tuple[sp._csr.csr_matrix, List[Tuple[float, float, float]]]:\n",
     "    \"\"\"Splitting dataset into train and test\n",
     "\n",
     "    Args:\n",
@@ -380,15 +393,19 @@
     "    Returns:\n",
     "        Tuple[sp._csr.csr_matrix, List[Tuple[float, float, float]]]: The train and test datasets\n",
     "    \"\"\"\n",
-    "    user_item_matrix = ratings.pivot(index='user', columns='movie_id', values='rating').fillna(0)\n",
+    "    user_item_matrix = ratings.pivot(\n",
+    "        index=\"user\", columns=\"movie_id\", values=\"rating\"\n",
+    "    ).fillna(0)\n",
     "\n",
     "    # Convert to sparse matrix\n",
     "    ratings_csr = csr_matrix(user_item_matrix.values)\n",
     "\n",
     "    # Select 20% of users randomly\n",
     "    np.random.seed(42)\n",
-    "    unique_users = ratings['user'].unique()\n",
-    "    test_users = np.random.choice(unique_users, size=int(0.2 * len(unique_users)), replace=False)\n",
+    "    unique_users = ratings[\"user\"].unique()\n",
+    "    test_users = np.random.choice(\n",
+    "        unique_users, size=int(0.2 * len(unique_users)), replace=False\n",
+    "    )\n",
     "\n",
     "    # Prepare train and test data\n",
     "    train_data = ratings_csr.copy().toarray()\n",
@@ -401,7 +418,7 @@
     "            test_item = np.random.choice(user_ratings)\n",
     "            test_data.append((user_index, test_item, train_data[user_index, test_item]))\n",
     "            train_data[user_index, test_item] = 0  # Remove one rating\n",
-    "    \n",
+    "\n",
     "    train_data = csr_matrix(train_data)\n",
     "\n",
     "    return train_data, test_data"
@@ -441,12 +458,14 @@
     "    def __init__(self, train_data, test_data):\n",
     "        self.train_data = train_data\n",
     "\n",
-    "    def calc_opposite_vectors(self, Y: np.ndarray, A: np.ndarray, k: int, lam: int) -> np.ndarray:\n",
+    "    def calc_opposite_vectors(\n",
+    "        self, Y: np.ndarray, A: np.ndarray, k: int, lam: int\n",
+    "    ) -> np.ndarray:\n",
     "        \"\"\"\n",
     "        Method to calculate opposite vectors\n",
     "\n",
     "        Args:\n",
-    "            Y (np.ndarray): The matrix of embeddings for the opposite factor \n",
+    "            Y (np.ndarray): The matrix of embeddings for the opposite factor\n",
     "            (e.g., item embeddings if solving for user embeddings)\n",
     "            A (np.ndarray): The ratings matrix, where rows correspond to users (or items)\n",
     "            and columns correspond to items (or users)\n",
@@ -461,8 +480,10 @@
     "        out = np.linalg.inv(B).dot(C.T).T\n",
     "        return out\n",
     "\n",
-    "    def train(self, k: int, lam: float, iterations: int = 15) -> Tuple[np.ndarray, np.ndarray, List[float]]:\n",
-    "        '''Alternating Least Squares algorithm\n",
+    "    def train(\n",
+    "        self, k: int, lam: float, iterations: int = 15\n",
+    "    ) -> Tuple[np.ndarray, np.ndarray, List[float]]:\n",
+    "        \"\"\"Alternating Least Squares algorithm\n",
     "\n",
     "        Args:\n",
     "            ratings: sparse matrix of ratings\n",
@@ -472,7 +493,7 @@
     "\n",
     "        Returns:\n",
     "            Tuple[np.ndarray, np.ndarray, List[float]]: user embeddings, item embeddings and loss values\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "        num_users, num_items = self.train_data.shape\n",
     "        X = np.random.randn(num_users, k)\n",
     "        Y = np.random.randn(num_items, k)\n",
@@ -490,10 +511,10 @@
     "            loss_values.append(mse)\n",
     "\n",
     "            print(f\"Iteration {i+1}/{iterations}, MSE: {mse}\")\n",
-    "        \n",
+    "\n",
     "        end = time.time()\n",
     "        print(f\"Self-implemented ALS training took {end - start} sec\")\n",
-    "        \n",
+    "\n",
     "        return X, Y, loss_values"
    ]
   },
@@ -644,7 +665,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mrr_at_k(predictions: np.ndarray, ground_truth: List[Tuple[int, int]], k: int =10):\n",
+    "def mrr_at_k(predictions: np.ndarray, ground_truth: List[Tuple[int, int]], k: int = 10):\n",
     "    \"\"\"Calculate Mean Reciprocal Rank at K (MRR@K)\"\"\"\n",
     "    mrr = 0.0\n",
     "    for user_index, true_item in ground_truth:\n",
@@ -671,14 +692,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_top_k_recommendations(user_embeddings: np.ndarray, item_embedding: np.ndarray, k: int = 10):\n",
+    "def get_top_k_recommendations(\n",
+    "    user_embeddings: np.ndarray, item_embedding: np.ndarray, k: int = 10\n",
+    "):\n",
     "    \"\"\"Get top-k recommendations for users\"\"\"\n",
     "    scores = np.dot(user_embeddings, item_embeddings.T)\n",
     "    top_k_items = np.argsort(scores, axis=1)[:, ::-1][:, :k]\n",
     "    top_k_scores = np.take_along_axis(scores, top_k_items, axis=1)\n",
     "    return top_k_items, top_k_scores\n",
     "\n",
-    "top_10_recommendations, top_10_scores = get_top_k_recommendations(user_embeddings, item_embeddings, k=10)"
+    "\n",
+    "top_10_recommendations, top_10_scores = get_top_k_recommendations(\n",
+    "    user_embeddings, item_embeddings, k=10\n",
+    ")"
    ]
   },
   {
@@ -807,7 +833,11 @@
     "    top_k_scores = np.take_along_axis(scores, top_k_items, axis=1)\n",
     "    return top_k_items, top_k_scores\n",
     "\n",
-    "top_10_recommendations_implicit, top_10_scores_implicit = get_top_k_recommendations_implicit(model, train_data, k=10)"
+    "\n",
+    "(\n",
+    "    top_10_recommendations_implicit,\n",
+    "    top_10_scores_implicit,\n",
+    ") = get_top_k_recommendations_implicit(model, train_data, k=10)"
    ]
   },
   {
@@ -824,7 +854,7 @@
     }
    ],
    "source": [
-    "mrr_10_implicit= mrr_at_k(top_10_recommendations_implicit, ground_truth, k=10)\n",
+    "mrr_10_implicit = mrr_at_k(top_10_recommendations_implicit, ground_truth, k=10)\n",
     "print(f\"MRR@10 for `implicit` realization: {mrr_10_implicit}\")"
    ]
   },
@@ -842,10 +872,10 @@
    "outputs": [],
    "source": [
     "movies = pd.read_csv(\n",
-    "    \"archive/movie_titles.csv\", \n",
+    "    \"archive/movie_titles.csv\",\n",
     "    names=[\"movie_id\", \"year\", \"movie_name\"],\n",
-    "    encoding=\"utf-8\", \n",
-    "    sep=\",\", \n",
+    "    encoding=\"utf-8\",\n",
+    "    sep=\",\",\n",
     "    on_bad_lines=\"skip\",\n",
     ")"
    ]
@@ -865,11 +895,11 @@
    "source": [
     "user_recoms = pd.DataFrame(\n",
     "    list(zip(top_10_recommendations[0], top_10_scores[0])),\n",
-    "    columns=[\"movie_id\", \"pred_rating\"]\n",
+    "    columns=[\"movie_id\", \"pred_rating\"],\n",
     ")\n",
     "user_recoms_implicit = pd.DataFrame(\n",
     "    list(zip(top_10_recommendations_implicit[0], top_10_scores_implicit[0])),\n",
-    "    columns=[\"movie_id\", \"pred_rating\"]\n",
+    "    columns=[\"movie_id\", \"pred_rating\"],\n",
     ")"
    ]
   },
