--- a/seminar_06_ease_recbole/recsys_sem6_ease.ipynb
+++ b/seminar_06_ease_recbole/recsys_sem6_ease.ipynb
@@ -13,16 +13,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "import zipfile\n",
+    "\n",
+    "import gdown\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
     "from scipy.sparse import csr_matrix\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "import gdown\n",
-    "import zipfile"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -66,8 +66,8 @@
     }
    ],
    "source": [
-    "file_id = '1bQaLKqVXCEc_glE2UvohUd9yMaAiubEp'\n",
-    "destination = 'lastfm.zip'\n",
+    "file_id = \"1bQaLKqVXCEc_glE2UvohUd9yMaAiubEp\"\n",
+    "destination = \"lastfm.zip\"\n",
     "download_url = f\"https://drive.google.com/uc?id={file_id}\"\n",
     "\n",
     "gdown.download(download_url, destination, quiet=False)"
@@ -79,8 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with zipfile.ZipFile(destination, 'r') as zip_ref:\n",
-    "    zip_ref.extractall('lastfm')"
+    "with zipfile.ZipFile(destination, \"r\") as zip_ref:\n",
+    "    zip_ref.extractall(\"lastfm\")"
    ]
   },
   {
@@ -97,10 +97,10 @@
    "outputs": [],
    "source": [
     "ratings = pd.read_csv(\n",
-    "    \"lastfm/lastfm.inter\", \n",
-    "    sep='\\t', \n",
+    "    \"lastfm/lastfm.inter\",\n",
+    "    sep=\"\\t\",\n",
     "    names=[\"user_id\", \"artist_id\", \"weight\", \"tag\"],\n",
-    "    header=0\n",
+    "    header=0,\n",
     ")"
    ]
   },
@@ -208,10 +208,10 @@
    "outputs": [],
    "source": [
     "items_data = pd.read_csv(\n",
-    "    \"lastfm/lastfm.item\", \n",
-    "    sep='\\t', \n",
+    "    \"lastfm/lastfm.item\",\n",
+    "    sep=\"\\t\",\n",
     "    names=[\"artist_id\", \"name\", \"url\", \"picture_url\"],\n",
-    "    header=0\n",
+    "    header=0,\n",
     ")"
    ]
   },
@@ -346,7 +346,7 @@
     }
    ],
    "source": [
-    "plt.hist(ratings[\"weight\"], bins=20, log=True);\n",
+    "plt.hist(ratings[\"weight\"], bins=20, log=True)\n",
     "plt.xlabel(\"# interactions with artist\")"
    ]
   },
@@ -367,11 +367,15 @@
     }
    ],
    "source": [
-    "user_artist_counts = ratings.groupby('artist_id')['user_id'].count().values\n",
+    "user_artist_counts = ratings.groupby(\"artist_id\")[\"user_id\"].count().values\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
-    "ax = sns.histplot(user_artist_counts, bins=10, log_scale=True);\n",
-    "ax.set(xlabel=\"Number of users\", ylabel=\"Number of artists\", title='User-artist interactions count')\n",
+    "ax = sns.histplot(user_artist_counts, bins=10, log_scale=True)\n",
+    "ax.set(\n",
+    "    xlabel=\"Number of users\",\n",
+    "    ylabel=\"Number of artists\",\n",
+    "    title=\"User-artist interactions count\",\n",
+    ")\n",
     "ax.grid()"
    ]
   },
@@ -422,8 +426,8 @@
     "        self.item_enc = LabelEncoder()\n",
     "\n",
     "    def _get_users_and_items(self, df):\n",
-    "        users = self.user_enc.fit_transform(df.loc[:, 'user_id'])\n",
-    "        items = self.item_enc.fit_transform(df.loc[:, 'artist_id'])\n",
+    "        users = self.user_enc.fit_transform(df.loc[:, \"user_id\"])\n",
+    "        items = self.item_enc.fit_transform(df.loc[:, \"artist_id\"])\n",
     "        return users, items\n",
     "\n",
     "    def fit(self, df, lambda_: float = 0.5, implicit=True):\n",
@@ -436,7 +440,7 @@
     "        values = (\n",
     "            np.ones(df.shape[0])\n",
     "            if implicit\n",
-    "            else df['weight'].to_numpy() / df['weight'].max()\n",
+    "            else df[\"weight\"].to_numpy() / df[\"weight\"].max()\n",
     "        )\n",
     "\n",
     "        X = csr_matrix((values, (users, items)))\n",
@@ -455,9 +459,9 @@
     "    def predict(self, train, users, items, k):\n",
     "        items = self.item_enc.transform(items)\n",
     "        dd = train.loc[train.user_id.isin(users)]\n",
-    "        dd['ci'] = self.item_enc.transform(dd.artist_id)\n",
-    "        dd['cu'] = self.user_enc.transform(dd.user_id)\n",
-    "        g = dd.groupby('cu')\n",
+    "        dd[\"ci\"] = self.item_enc.transform(dd.artist_id)\n",
+    "        dd[\"cu\"] = self.user_enc.transform(dd.user_id)\n",
+    "        g = dd.groupby(\"cu\")\n",
     "\n",
     "        user_preds = []\n",
     "        for user, group in g:\n",
@@ -466,13 +470,13 @@
     "            )\n",
     "\n",
     "        df = pd.concat(user_preds)\n",
-    "        df['artist_id'] = self.item_enc.inverse_transform(df['artist_id'])\n",
-    "        df['user_id'] = self.user_enc.inverse_transform(df['user_id'])\n",
+    "        df[\"artist_id\"] = self.item_enc.inverse_transform(df[\"artist_id\"])\n",
+    "        df[\"user_id\"] = self.user_enc.inverse_transform(df[\"user_id\"])\n",
     "        return df\n",
     "\n",
     "    @staticmethod\n",
     "    def predict_for_user(user, group, pred, items, k):\n",
-    "        watched = set(group['ci'])\n",
+    "        watched = set(group[\"ci\"])\n",
     "        candidates = [item for item in items if item not in watched]\n",
     "        pred = np.take(pred, candidates)\n",
     "        res = np.argpartition(pred, -k)[-k:]\n",
@@ -482,7 +486,7 @@
     "                \"artist_id\": np.take(candidates, res),\n",
     "                \"score\": np.take(pred, res),\n",
     "            }\n",
-    "        ).sort_values('score', ascending=False)\n",
+    "        ).sort_values(\"score\", ascending=False)\n",
     "        return r"
    ]
   },
@@ -531,10 +535,12 @@
    "source": [
     "users_to_predict = [2, 3, 4, 5]\n",
     "\n",
-    "all_items = ratings['artist_id'].unique()\n",
+    "all_items = ratings[\"artist_id\"].unique()\n",
     "\n",
     "k = 5  # Number of recommendations per user\n",
-    "recommendations = ease.predict(train=ratings, users=users_to_predict, items=all_items, k=k)"
+    "recommendations = ease.predict(\n",
+    "    train=ratings, users=users_to_predict, items=all_items, k=k\n",
+    ")"
    ]
   },
   {
@@ -922,27 +928,27 @@
    "outputs": [],
    "source": [
     "def compute_mrr(iencoder, uencoder, train, preds, k=10):\n",
-    "    users = train['user_id'].unique()\n",
-    "    items = train['artist_id'].unique()\n",
+    "    users = train[\"user_id\"].unique()\n",
+    "    items = train[\"artist_id\"].unique()\n",
     "\n",
     "    sampled_users = np.random.choice(users, size=int(0.1 * len(users)), replace=False)\n",
-    "    \n",
+    "\n",
     "    mrr = 0\n",
     "    for user in tqdm(sampled_users):\n",
-    "        true_items = train[train['user_id'] == user]['artist_id'].values\n",
-    "        \n",
+    "        true_items = train[train[\"user_id\"] == user][\"artist_id\"].values\n",
+    "\n",
     "        user_index = uencoder.transform([user])[0]\n",
     "        item_indices = iencoder.transform(items)\n",
-    "        \n",
+    "\n",
     "        ranked_items = np.argsort(-preds)[:k]  # Top-k ranked items\n",
-    "        \n",
+    "\n",
     "        for true_item in true_items:\n",
     "            true_item_index = iencoder.transform([true_item])[0]\n",
     "            if true_item_index in ranked_items:\n",
     "                rank = np.where(ranked_items == true_item_index)[0][0] + 1\n",
     "                mrr += 1 / rank\n",
     "                break  # Only the first relevant item matters for MRR\n",
-    "    \n",
+    "\n",
     "    return mrr / len(users)"
    ]
   },
